--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -10,6 +10,11 @@ fhirVersion: 4.0.1
 FSHOnly: true
 dependencies:
     hl7.fhir.us.core: 3.1.0
-    hl7.fhir.us.mcode: 1.16.0
-
-   
+    hl7.fhir.us.mcode: 
+      id: mcode
+      uri: http://build.fhir.org/ig/HL7/fhir-mCODE-ig
+      version: current
+    hl7.fhir.us.codexrt: 
+      id: codexrt
+      uri: http://build.fhir.org/ig/HL7/codex-radiation-therapy
+      version: current
