--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -14,7 +14,7 @@ dependencies:
       id: mcode
       uri: http://build.fhir.org/ig/HL7/fhir-mCODE-ig
       version: current
-    hl7.fhir.us.codexrt: 
-      id: codexrt
+    hl7.fhir.us.codex-radiation-therapy: 
+      id: codex-radiation-therapy
       uri: http://build.fhir.org/ig/HL7/codex-radiation-therapy
       version: current
